Fix overflow issue

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -60,7 +60,6 @@
   };
   min-width: 350px;
   width: 67vh;
-  overflow-y: scroll;
   background-color: #262626;
   height: 75vh;
   border-radius: 10px;
